7661 - Fixed contrast issue with account tips

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -89,3 +89,7 @@
 .password-rule {
     color: #555;
 }
+
+.account-tips {
+    color: #595959;
+}
